[package]
name = "flag_encryption_as_a_service"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
aes = "0.8.4"
cbc = "0.1.2"
axum = "0.8.3"
tokio = { version = "1.44.2", features = ["rt-multi-thread"] }
serde = { version = "1.0.219", features = ["derive"] }
lazy_static = "1.5.0"
